--- a/sass/object/project/_p-quiz-main.scss
+++ b/sass/object/project/_p-quiz-main.scss
@@ -173,7 +173,7 @@
       flex-direction: column;
       gap: 16px;
 
-      padding: 24px;
+      padding: 24px 40px;
       border-radius: 8px;
 
       &.is-correct {
